<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/layout_preference_title"
        app:title="General">

        <ListPreference
            android:entries="@array/master_key"
            android:entryValues="@array/master_value"
            android:layout="@layout/layout_preference_edt"
            app:defaultValue="1"
            app:icon="@drawable/ic_outline_text_snippet_24"
            app:key="@string/txt_key_master"
            app:title="@string/title_master"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:entries="@array/keyboard_key"
            android:entryValues="@array/keyboard_value"
            android:layout="@layout/layout_preference_edt"
            app:defaultValue="0"
            app:icon="@drawable/ic_outline_keyboard_24"
            app:key="@string/txt_key_keyboard"
            app:title="@string/title_keyboard"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:entries="@array/effect_key"
            android:entryValues="@array/effect_value"
            android:layout="@layout/layout_preference_edt"
            app:defaultValue="0"
            app:icon="@drawable/ic_outline_auto_awesome_24"
            app:isPreferenceVisible="false"
            app:key="@string/txt_key_effect"
            app:title="@string/title_effect"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/layout_preference_title"
        app:title="Patlite">

        <EditTextPreference
            android:layout="@layout/layout_preference_edt"
            app:defaultValue="192.168.0.1"
            app:icon="@drawable/ic_dns_24px"
            app:key="@string/txt_key_address"
            app:title="@string/title_address"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>