<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_liquid_cheese"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".modules.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_32"
        android:layout_marginTop="@dimen/dm_36"
        android:layout_marginEnd="@dimen/dm_32"
        android:layout_marginBottom="@dimen/dm_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/TextMedium.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_full_app_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvAppVersion"
                    style="@style/TextSmall.Red.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dm_8"
                    android:layout_weight="1"
                    android:text="@string/txt_app_version_unset" />

            </LinearLayout>

            <TextView
                style="@style/TextSmall.Gray.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_developed_by_sato_auto_id_thailand" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSettings"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_settings_24" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilScan1"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_32"
        android:layout_marginTop="@dimen/dm_16"
        android:layout_marginEnd="@dimen/dm_32"
        android:layout_marginBottom="@dimen/dm_8"
        android:hint="Scan Master"
        app:endIconMode="clear_text"
        app:endIconTint="@color/fields_stroke_selector"
        app:startIconDrawable="@drawable/ic_baseline_qr_code_scanner_24"
        app:startIconTint="@color/fields_stroke_selector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtScan1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilScan2"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_32"
        android:layout_marginTop="@dimen/dm_8"
        android:layout_marginEnd="@dimen/dm_32"
        android:layout_marginBottom="@dimen/dm_16"
        android:hint="Scan Product"
        app:endIconMode="clear_text"
        app:endIconTint="@color/fields_stroke_selector"
        app:startIconDrawable="@drawable/ic_baseline_qr_code_scanner_24"
        app:startIconTint="@color/fields_stroke_selector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtScan2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextMedium.Green.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ok" />

        <TextView
            android:id="@+id/tvOKCount"
            style="@style/TextMedium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm_8"
            android:layout_marginEnd="@dimen/dm_8"
            android:text="0" />

        <TextView
            style="@style/TextMedium.Red.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ng" />

        <TextView
            android:id="@+id/tvNGCount"
            style="@style/TextMedium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm_8"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dm_32"
        android:layout_marginTop="@dimen/dm_16"
        android:layout_marginEnd="@dimen/dm_32"
        android:layout_marginBottom="@dimen/dm_16"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOK"
            style="@style/TextLarge.Gainsboro.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ok"
            android:textAlignment="textEnd"
            android:textSize="64sp" />

        <TextView
            style="@style/TextLarge.Gainsboro.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm_8"
            android:layout_marginEnd="@dimen/dm_8"
            android:text="@string/txt_slash"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/tvNG"
            style="@style/TextLarge.Gainsboro.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ng"
            android:textAlignment="textStart"
            android:textSize="64sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_32"
        android:layout_marginTop="@dimen/dm_16"
        android:layout_marginEnd="@dimen/dm_32"
        android:layout_marginBottom="@dimen/dm_36"
        android:text="Clear" />

</LinearLayout>